[gd_scene load_steps=3 format=3 uid="uid://yjdo1xucnpw7"]

[ext_resource type="Theme" uid="uid://b7cp6hc23xm1k" path="res://content/themes/dialog_theme.tres" id="1_iwbkh"]
[ext_resource type="Script" path="res://content/dialogs/talker_dialog.gd" id="2_l0a58"]

[node name="TalkerDialog" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iwbkh")
script = ExtResource("2_l0a58")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -69.0
offset_right = 162.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelInner"

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="CaptionLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/CenterContainer"]
layout_mode = 2
theme_type_variation = &"CaptionLabel"
text = "Безумец"

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"PanelInner"

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/CenterContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Туда не ходи, сюда ходи! Здесь опасно, незнакомец!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"PanelInner"

[node name="QuestionsContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer3/QuestionsContainer"]
layout_mode = 2
text = ">  По какому поводу паника?"

[node name="Label4" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer3/QuestionsContainer"]
layout_mode = 2
text = "   Туда охота, не поверишь!"

[node name="Label5" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer3/QuestionsContainer"]
layout_mode = 2
text = "   А вы, собственно, чьих будете?"

[connection signal="ready" from="." to="." method="_on_ready"]
